@@ -4,7 +4,8 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Use getMultiAdapter instead of restrictedTraverse in Views
+  [gborelli]
 
 
 2.1.2 (2014-03-16)
